<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简单浏览器</string>
    <string name="action_settings">Settings</string>
    <string name="close">关闭</string>
    <string name="bookmarks">书签</string>
    <string name="traceless">无痕</string>
    <string name="setting">设置</string>
    <string name="history">历史</string>
    <string name="download">下载</string>
    <string name="add_bookmarks">加入书签</string>
    <string name="has_img">智能无图</string>
     <string name="sure">确定</string>
</resources>
