<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bg_sort"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black_transparent"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/btn_bookmarks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewbookmarks"
                style="@style/btnImage"
                android:src="@drawable/bookmarks" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/bookmarks"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_add_bookmarks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:background="@drawable/add_bookmarks"
                style="@style/btnImage"
                android:gravity="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                 android:text="@string/add_bookmarks"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_download"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                style="@style/btnImage"
                android:background="@drawable/download"
                android:gravity="center" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/download"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewhistory"
                style="@style/btnImage"
                android:gravity="center"
                android:src="@drawable/history" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/history"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:background="#eee"
        android:orientation="horizontal"
        android:paddingBottom="1dp" >

        <LinearLayout
            android:id="@+id/btn_hasImg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewHasImg"
                style="@style/btnImage" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/has_img"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_traceless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewtraceless"
                style="@style/btnImage"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/traceless"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewsettings"
                style="@style/btnImage"
                android:gravity="center"
                android:src="@drawable/settings" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_close"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageViewclose"
                style="@style/btnImage"
                android:gravity="center"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_fold"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fold" />
    </LinearLayout>

</LinearLayout>